Code refactor, added new expections, removed reacitivty.